Added a bunch of build data and sh scripts

--- a/AntiGuard/res/layout/main.xml
+++ b/AntiGuard/res/layout/main.xml
@@ -4,25 +4,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-
-<Button android:text="Back" 
-	android:id="@+id/backButton" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content"></Button>
-
-<Button android:text="Launcher" 
-	android:id="@+id/launcherButton" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content"></Button>
-
-<Button android:text="Development Settings" 
-	android:id="@+id/developmentButton" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content"></Button>
-
-<Button android:text="Uninstall AntiGuard"
-	android:id="@+id/uninstallButton" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content"></Button>
-
+<TextView  
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:text="Hello World, unlock"
+    />
 </LinearLayout>
+
