--- a/AntiGuard/res/layout/main.xml
+++ b/AntiGuard/res/layout/main.xml
@@ -4,10 +4,25 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, unlock"
-    />
-</LinearLayout>
 
+<Button android:text="Back" 
+	android:id="@+id/backButton" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"></Button>
+
+<Button android:text="Launcher" 
+	android:id="@+id/launcherButton" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"></Button>
+
+<Button android:text="Development Settings" 
+	android:id="@+id/developmentButton" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"></Button>
+
+<Button android:text="Uninstall AntiGuard"
+	android:id="@+id/uninstallButton" 
+	android:layout_width="wrap_content" 
+	android:layout_height="wrap_content"></Button>
+
+</LinearLayout>
